# streamchat

./: .gitignore  CMakeLists.txt  build_clang.sh  readme.md
include/: clients.h  config.h
src/client/: CMakeLists.txt  main.c
src/server/: CMakeLists.txt  clients.c  main.c
